framec_tests/language_specific/cpp/v3_facade_smoke/negative/strict_multi_errors.frm
@target cpp

system S {
    machine:
        $A {
            e() {
                -> $B();
                std::vector<int x;    // missing '>'
                int y = ;             // missing initializer
                if ( { ) { }          // malformed if
            }
        }
        $B {
        }
}

